2006-01-16  Rick Moseley  <rmoseley@redhat.com>
	* Remove DOMTestDOMFrysk.java(now is TestDOM.java).

2006-01-06  Rick Moseley  <rmoseley@redhat.com>

	* TestDOM.java: Fix reverse logic errors.
	(DOMImage): Put assert* in iteration loop for testDOMImage.
	Remove System.out.prinln stmts.

2006-01-06  Rick Moseley  <rmoseley@redhat.com>

	* TestDOM.java: New for junit testing.

2005-12-09  Adam Jocksch  <ajocksch@redhat.com>

	* DOMInlineInstance (hasParentInlineInstance): Added.
	(getPreviousInstance): Added.

	* DOMFunction.java (getSource): Added.
	(getSourceName): Removed, should now get name through the
	DOMSource returned by getSource.

2005-12-08  Adam Jocksch  <ajocksch@redhat.com>

	* Directory moved to frysk-core/frysk/dom/, from
	frysk-gui/frysk/srcwin/dom/.
	
2005-11-23  Adam Jocksch  <ajocksch@redhat.com>

	* DOMFrysk.java: Moved IMAGE_ATTR constant to DOMImage.
	* DOMFunction.java: Added FUNCTION_NODE constant and moved
	INLINE_NODE constant to DOMInlineInstance.
	* DOMImage.java: Removed INLINE_NODE constant, was redundant.
	(getFunction): Now uses FUNCTION_NODE from DOMFunction.
	* DOMInlineInstance.java: Created INLINE_NODE constant.
	(addInlineInstance): Added.
	(hasInlineInstance): Added.
	(getInlineInstance): Added.
	* DOMLine.java (setHasInline): Removed.
	(hasInlinedCode): No longer relies on the member variable.
	(addInlineCode): No longer sets member variable.
	* DOMSource.java: Removed LINENO_NODE = "line";
	(addLine): No longer takes 'has_inline' variable.
	* DOMTagTypes: Added constant for out of scope variables.
	* DOMTestDOMFrysk: Commented out unused variable due to DOMLine
	no longer needing a 'has_inline' variable for addLine.
	
2005-11-22  Adam Jocksch  <ajocksch@redhat.com>

	* DOMLine.java (getTag): Now only gets tags of type "tag", no
	longer erroneously includes inline instances tags.

2005-11-21  Adam Jocksch  <ajocksch@redhat.com>

	* DOMInlineInstance.java (getPCLine): Added.